<resources>
    <string name="app_name">SmartFlex-Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_quotes">Quotes</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_tasks">Tasks</string>
    <string name="task_title">Task Title</string>
    <string name="category">Category</string>
    <string name="priority">Priority</string>
    <string name="create_task">Create Task</string>
    <string name="menu_settings">Settings</string>
    <string name="add_new_category">Add new category</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_category">Add Category</string>
    <string name="change_language">Change language</string>
    <string name="dialog_permission_title">Permissions required</string>
    <string name="menu_notes">Notes</string>
    <string name="create_note">Create Note</string>
    <string name="note_here">Note here</string>
    <string name="font">Font</string>
    <string name="menu_contacts">Contacts</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="department">Department</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="phone">Phone</string>
    <string name="other_phone">Other Phone</string>
    <string name="mobile">Mobile</string>
    <string name="home_phone">Home Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="street">Street</string>
    <string name="other_street">Other Street</string>
    <string name="city">City</string>
    <string name="other_city">Other City</string>
    <string name="state">State</string>
    <string name="other_state">Other state</string>
    <string name="country">Country</string>
    <string name="other_country">Other country</string>
    <string name="zip_code">Zip Code</string>
    <string name="other_zip_code">Other zip code</string>
    <string name="description">Description</string>
    <string name="add_contact">Add Contact</string>
    <string name="accounts">Accounts</string>
    <string name="account_name">Account Name</string>
    <string name="website">Website</string>
    <string name="create_new_account">Create new account</string>
    <string name="create_account">Create Account</string>
    <string name="account_site">Account Site</string>
    <string name="fax">Fax</string>
    <string name="account_type">Account Type</string>
    <string name="secondary_email">Secondary Email</string>
    <string name="contact_information">CONTACT INFORMATION</string>
    <string name="address_information">ADDRESS INFORMATION</string>
    <string name="description_information">DESCRIPTION INFORMATION</string>
    <string name="company">Company</string>
    <string name="social_links">SOCIAL LINKS</string>
    <string name="linkedin">Linkedin</string>
    <string name="skype">Skype</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="vendor_name">Vendor name</string>
    <string name="lead_source">Lead Source</string>
    <string name="is_not_set">is not set</string>

    //Day's short keyword
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="nav_calendar">Calendar</string>
    <string name="event_name_and_time_required">Event name and time are required</string>
    <string name="create_new_task">Create new task</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="tags">Tags</string>

</resources>