<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.erald_guri.smartflex_android.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.erald_guri.smartflex_android.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.erald_guri.smartflex_android.ui.tasks.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks" >
        <action
            android:id="@+id/action_nav_tasks_to_newTaskFragment"
            app:destination="@id/newTaskFragment" />
    </fragment>
    <fragment
        android:id="@+id/newTaskFragment"
        android:name="com.erald_guri.smartflex_android.ui.tasks.NewTaskFragment"
        android:label="@string/create_new_task"
        tools:layout="@layout/fragment_new_task" />
</navigation>